# trajectory-distiller

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/trajectory_distiller/: __init__.py  cli.py  converter.py  distiller.py  filter.py  splitter.py
